--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,30 +1,34 @@
 .headerContainer {
-    background-color: var(--background);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: var(--background);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    padding: 1em 5em;
+  top: 0;
+  z-index: 10000;
+  position: sticky;
+
+  padding: 1em 5em;
 }
 
 .navList {
-    list-style: none;
-    gap: 3em;
-    display: flex;
-    align-content: center;
+  list-style: none;
+  gap: 3em;
+  display: flex;
+  align-content: center;
 }
 
 .navList .item {
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 1.1325rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.1325rem;
 }
 
 .imgContainer {
-    max-width: 200px;
+  max-width: 200px;
 }
 
 .img {
-    max-width: 100%;
-    object-fit: cover;
+  max-width: 100%;
+  object-fit: cover;
 }
