--- a/src/app/home/Home.module.css
+++ b/src/app/home/Home.module.css
@@ -3,7 +3,7 @@
   grid-auto-flow: column;
   gap: 3em;
   align-items: center;
-  padding: 2.5em 4em;
+  padding: 2.5em 2em;
   justify-content: center;
 
   background-color: var(--backgroundCyan);
@@ -30,13 +30,9 @@
   max-width: 700px;
 }
 
-.info p {
-  font-size: 18px;
-}
-
 .identityContainer {
   display: grid;
-  padding: 2.5em 4em;
+  padding: 2.5em 2em;
   gap: 2em;
 }
 
@@ -45,12 +41,13 @@
   max-width: 1200px;
   display: grid;
   grid-auto-flow: column;
-  gap: 3em;
+  gap: 4em;
 }
 
 .identityImgContainer {
   margin-inline: auto;
   max-width: 80px;
+  min-height: 80px;
 }
 
 .identityImgContainer img {
@@ -71,9 +68,41 @@
   text-align: center;
 }
 
+.identityItem p {
+  min-height: 200px;
+}
+
+.appContainer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  gap: 4em;
+
+  color: white;
+  background-color: #2a592f;
+  padding: 4em 2em;
+}
+
+.appInfo {
+  display: grid;
+  gap: 1em;
+  max-width: 700px;
+}
+
+.appInfo a {
+  font-size: 1.125rem;
+  padding: 0.5em 1.3125em;
+  background-color: #004668;
+  border-radius: 12px;
+  max-width: fit-content;
+}
+
 @media (width <= 1000px) {
   .introContainer {
     grid-auto-flow: row;
+    gap: 2em;
   }
 
   .info {
@@ -82,10 +111,18 @@
 
   .identityItemsContainer {
     grid-auto-flow: row;
-    gap: 4em;
+    gap: 2em;
   }
 
   .info {
     text-align: center;
+  }
+
+  .appInfo {
+    text-align: center;
+  }
+
+  .appInfo a {
+    margin-inline: auto;
   }
 }
