--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -28,6 +28,10 @@
   max-width: 200px;
 }
 
+.navList .item:hover {
+  border-bottom: 3px solid #6BB000;
+}
+
 .img {
   max-width: 100%;
   object-fit: cover;
