--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,5 +1,6 @@
 .headerContainer {
   background-color: var(--background);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
