--- a/src/app/sostenibilidad/sostenibilidad.module.css
+++ b/src/app/sostenibilidad/sostenibilidad.module.css
@@ -23,8 +23,20 @@
 .podcastContainer {
   padding: var(--customPadding);
 
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   gap: 1em;
-  justify-content: center;
   text-align: center;
+}
+
+.videoContainer {
+  width: 100%;
+  max-width: 800px;
+}
+
+.video {
+  inline-size: 100%;
+  aspect-ratio: 16 /9;
 }
