--- a/src/app/home/Home.module.css
+++ b/src/app/home/Home.module.css
@@ -85,13 +85,13 @@
   padding: 4em 2em;
 }
 
-.appInfo {
+.info {
   display: grid;
   gap: 1em;
   max-width: 700px;
 }
 
-.appInfo a {
+.info a {
   font-size: 1.125rem;
   padding: 0.5em 1.3125em;
   background-color: #004668;
@@ -118,11 +118,11 @@
     text-align: center;
   }
 
-  .appInfo {
+  .info {
     text-align: center;
   }
 
-  .appInfo a {
+  .info a {
     margin-inline: auto;
   }
 }
