--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -6,10 +6,10 @@
   align-items: center;
 
   top: 0;
-  z-index: 10000;
+  z-index: 9999;
   position: sticky;
 
-  padding: 1em 5em;
+  padding: 1rem max(4vw, 25px);
 }
 
 .navList {
@@ -17,6 +17,45 @@
   gap: 3em;
   display: flex;
   align-content: center;
+}
+
+.mobileNavToggle {
+  display: none;
+}
+
+@media (width <= 900px) {
+  .navList {
+    position: fixed;
+    inset: 0 0 0 45%;
+
+    flex-direction: column;
+    padding: min(12vh, 10rem) 1em;
+
+    background-color: #ffffff;
+
+    transform: translateX(100%);
+    transition: transform 200ms ease-out;
+  }
+
+  .navList[data-visible="true"] {
+    transform: translateX(0%);
+  }
+
+  .mobileNavToggle {
+    position: absolute;
+    display: block;
+    z-index: 10001;
+    background: url("/img/bars-solid.svg") no-repeat;
+    border: 0;
+    width: 2rem;
+    aspect-ratio: 1;
+    top: 2rem;
+    right: 2rem;
+  }
+
+  .mobileNavToggle[data-visible="true"] {
+    background: url("/img/xmark-solid.svg") no-repeat;
+  }
 }
 
 .navList .item {
@@ -30,7 +69,7 @@
 }
 
 .navList .item:hover {
-  border-bottom: 3px solid #6BB000;
+  border-bottom: 3px solid #6bb000;
 }
 
 .img {
